Se agregaron las respuestas y ya se muestran en el Front

--- a/index.html
+++ b/index.html
@@ -17,33 +17,13 @@
         <div class="chat__conversation-board__message__person">
           <div class="chat__conversation-board__message__person__avatar"><img
               src="https://d2cbg94ubxgsnp.cloudfront.net/Pictures/2000xAny/9/9/2/512992_shutterstock_715962319converted_749269.png"
-              alt="Monika Figi" id="botImg"/></div><span class="chat__conversation-board__message__person__nickname">Monika
+              alt="Monika Figi" id="botImg" /></div><span
+            class="chat__conversation-board__message__person__nickname">Monika
             Figi</span>
         </div>
         <div class="chat__conversation-board__message__context">
           <div class="chat__conversation-board__message__bubble"> <span>Hola, Soy CristianX3000</span></div>
           <div class="chat__conversation-board__message__bubble"> <span>¿Como te puedo ayudar?</span></div>
-        </div>
-        <div class="chat__conversation-board__message__options">
-          <button class="btn-icon chat__conversation-board__message__option-button option-item emoji-button">
-            <svg class="feather feather-smile sc-dnqmqq jxshSx" xmlns="http://www.w3.org/2000/svg" width="24"
-              height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
-              stroke-linejoin="round" aria-hidden="true">
-              <circle cx="12" cy="12" r="10"></circle>
-              <path d="M8 14s1.5 2 4 2 4-2 4-2"></path>
-              <line x1="9" y1="9" x2="9.01" y2="9"></line>
-              <line x1="15" y1="9" x2="15.01" y2="9"></line>
-            </svg>
-          </button>
-          <button class="btn-icon chat__conversation-board__message__option-button option-item more-button">
-            <svg class="feather feather-more-horizontal sc-dnqmqq jxshSx" xmlns="http://www.w3.org/2000/svg" width="24"
-              height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
-              stroke-linejoin="round" aria-hidden="true">
-              <circle cx="12" cy="12" r="1"></circle>
-              <circle cx="19" cy="12" r="1"></circle>
-              <circle cx="5" cy="12" r="1"></circle>
-            </svg>
-          </button>
         </div>
       </div>
 
@@ -68,7 +48,7 @@
             <line x1="15" y1="9" x2="15.01" y2="9"></line>
           </svg>
         </button>
-        <input class="chat__conversation-panel__input panel-item" placeholder="Type a message..." id="message" />
+        <input class="chat__conversation-panel__input panel-item" placeholder="Escribe algo..." id="message" />
         <button class="chat__conversation-panel__button panel-item btn-icon send-message-button" id="sendMessage">
           <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
             stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true"
@@ -81,6 +61,7 @@
     </div>
   </div>
   <script src="main.js"></script>
+  <script src="chatBot.js"></script>
 </body>
 
 </html>
