Se refactorizo el codigo para no tener tantos if

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             Figi</span>
         </div>
         <div class="chat__conversation-board__message__context">
-          <div class="chat__conversation-board__message__bubble"> <span>Hola, Soy CristianX3000</span></div>
+          <div class="chat__conversation-board__message__bubble"> <span>Hola, Soy Cristian-TRON-X3000</span></div>
           <div class="chat__conversation-board__message__bubble"> <span>¿Como te puedo ayudar?</span></div>
         </div>
       </div>
