--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>CRIS-TRON-X3000</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="icon" type="image/x-icon" href="https://cdn-icons-png.flaticon.com/512/4712/4712109.png">
 </head>
 
 <body>
@@ -22,7 +23,7 @@
             Figi</span>
         </div>
         <div class="chat__conversation-board__message__context">
-          <div class="chat__conversation-board__message__bubble"> <span>Hola, Soy Cristian-TRON-X3000</span></div>
+          <div class="chat__conversation-board__message__bubble"> <span>Hola, Soy CRIS-TRON-X3000</span></div>
           <div class="chat__conversation-board__message__bubble"> <span>¿Como te puedo ayudar?</span></div>
         </div>
       </div>
